<resources>
    <string name="app_name">Dog_Observer</string>
    <string name="nav_bot_menu_feed">Feed</string>
    <string name="nav_bot_menu_favourites">Fa</string>
    <string name="login_forgot_password">FORGOT PASSWORD</string>
    <string name="login_password">password</string>
    <string name="login_username">username</string>
    <string name="login_header">Login DogObserver</string>
    <string name="login_button">login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>